--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -24,3 +24,24 @@ a {
     background: black;
   }
 }
+
+/* Loading Section Start */
+
+.LoadingContainer {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: white;
+  z-index: 30;
+}
+
+.Loading {
+  position: absolute;
+  top: 50vh;
+  width: 90%;
+  left: 5%;
+  right: 5%;
+  margin: auto;
+}
