--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -45,3 +45,11 @@ a {
   right: 5%;
   margin: auto;
 }
+
+/* Loading Section End */
+
+/* Dashboard Section Start */
+
+.dashboardNav {
+  color: 'white';
+}
